fix css bug in table scrollbar

--- a/help/css/markdown.css
+++ b/help/css/markdown.css
@@ -485,7 +485,6 @@ table {
     border-spacing: 0;
     margin: 0.8em auto 1em auto;
     overflow: auto;
-    overflow-y: scroll;
     scrollbar-width: thin;
     display: block;
 }
